@@ -8,7 +8,7 @@ use Carp 'confess';
 
 use SPVM::Builder::Util;
 use SPVM::Builder::Config;
-use SPVM::Builder::C;
+use SPVM::Builder::CC;
 
 use Scalar::Util 'weaken';
 
@@ -28,7 +28,7 @@ sub new {
   
   bless $self, $class;
   
-  my $builder_c_precompile = SPVM::Builder::C->new(
+  my $builder_c_precompile = SPVM::Builder::CC->new(
     build_dir => $self->{build_dir},
     category => 'precompile',
     builder => $self
@@ -178,7 +178,7 @@ sub build_shared_object_native_dist {
 
   my $sub_names = $self->get_native_sub_names($package_name);
 
-  my $builder_c_native = SPVM::Builder::C->new(
+  my $builder_c_native = SPVM::Builder::CC->new(
     build_dir => $self->{build_dir},
     category => 'native',
     builder => $self,
@@ -200,7 +200,7 @@ sub build_shared_object_precompile_dist {
   
   my $sub_names = $self->get_precompile_sub_names($package_name);
 
-  my $builder_c_precompile = SPVM::Builder::C->new(
+  my $builder_c_precompile = SPVM::Builder::CC->new(
     build_dir => $self->{build_dir},
     category => 'precompile',
     builder => $self,
@@ -213,7 +213,7 @@ sub build_shared_object_precompile_dist {
 sub build_precompile {
   my $self = shift;
 
-  my $builder_c_precompile = SPVM::Builder::C->new(
+  my $builder_c_precompile = SPVM::Builder::CC->new(
     build_dir => $self->{build_dir},
     category => 'precompile',
     builder => $self,
@@ -226,7 +226,7 @@ sub build_precompile {
 sub build_native {
   my $self = shift;
 
-  my $builder_c_native = SPVM::Builder::C->new(
+  my $builder_c_native = SPVM::Builder::CC->new(
     build_dir => $self->{build_dir},
     category => 'native',
     builder => $self,
